# unidecode-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  Cargo.toml  README.md  bench_compare.py  build.rs  mod.rs  pyproject.toml  sample.txt
.cargo/: config.toml
.github/workflows/: ci.yml  publish-pypi-oidc.yml  publish-pypi.yml
benches/: unidecode_bench.rs
docs/: COVERAGE.md  PERFORMANCE_PLAN.md
python/unidecode_rs/: __init__.py
scripts/: bench_compare.py  compute_parity.py  coverage.sh  pre-release-check.sh
src/: lib.rs  lib_py.rs
src/unidecode_table/: 00.rs  01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  09.rs  0a.rs  0b.rs  0c.rs  0d.rs  0e.rs  0f.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  1d.rs  1d4.rs  1d5.rs  1d6.rs  1d7.rs  1e.rs  1f.rs  1f1.rs  1f6.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  26.rs  (+147 more)
tests/: golden_equivalence.rs  lookup_paths.rs  property_ascii.rs  spec_cases.rs  spec_extra.rs
tests/python/: test_api_surface.py  test_errors_param.py  test_reference_suite.py  test_upstream_parity.py
tests/python/_reference/: upstream_loader.py
