[package]
name = "unidecode-rs"
version = "0.0.1"
edition = "2024"
authors = ["greg <greg@gregorymariani.com>"]
description = "Rust-backed transliteration similar to Python Unidecode, with optional PyO3 bindings for Python"
license = "GNU"
readme = "README.md"
repository = "https://github.com/gmaOCR/unidecode-rs"

build = "build.rs"

[lib]
name = "unidecode_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
deunicode = "0.4"
phf = { version = "0.10", features = ["macros"] }

[build-dependencies]
serde_json = "1.0"

[features]
# Pas de fallback par défaut : on veut l'équivalence stricte avec Python Unidecode.
default = []
python = ["pyo3/extension-module"]
# Active un fallback vers la crate `deunicode` pour les codepoints non mappés par Python Unidecode.
# Désactivé par défaut afin d'assurer une sortie identique à Python.
fallback-deunicode = []

[dependencies.pyo3]
version = "0.26"
optional = true
features = ["extension-module"]

[dev-dependencies]

[package.metadata.maturin]
bindings = "pyo3"
module-name = "unidecode_rs"
