[package]
name = "unidecode-rs"
version = "0.0.1"
edition = "2024"
authors = ["greg <greg@gregorymariani.com>"]
description = "Rust-backed transliteration similar to Python Unidecode, with optional PyO3 bindings for Python"
license = "GNU"
readme = "README.md"
repository = "https://github.com/gmaOCR/unidecode-rs"

build = "build.rs"

[lib]
name = "unidecode_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
deunicode = "0.4"
phf = { version = "0.10", features = ["macros"] }
unicode-normalization = "0.1"

[build-dependencies]
serde_json = "1.0"

[features]
# No fallback by default: we want strict equivalence with Python Unidecode.
default = []
python = ["pyo3/extension-module"]
# Optional fallback using the `deunicode` crate for code points not mapped by Python Unidecode.
# Disabled by default to guarantee identical output to Python.
fallback-deunicode = []

[dependencies.pyo3]
version = "0.26"
optional = true
features = ["extension-module"]

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "unidecode_bench"
harness = false

[package.metadata.maturin]
bindings = "pyo3"
module-name = "unidecode_rs"
