[project]
name = "unidecode-pyo3"
version = "0.2.0"
description = "Rust-backed transliteration similar to Python Unidecode, with optional PyO3 bindings for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }

[tool.maturin]
module-name = "unidecode_rs"
 
[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"